--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@google/generative-ai": "^0.13.0",
     "prismjs": "^1.29.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
